refractorisation code + input controller + car et user h

--- a/CarRentalSytem/CarRentalSytem.vcxproj
+++ b/CarRentalSytem/CarRentalSytem.vcxproj
@@ -128,11 +128,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Downloads\sqlite-amalgamation-3470200\sqlite-amalgamation-3470200\sqlite3.c" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Car.cpp" />
+    <ClCompile Include="InputController.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="SqliteDatabase.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="App.h" />
+    <ClInclude Include="Car.h" />
+    <ClInclude Include="InputController.h" />
     <ClInclude Include="SqliteDatabase.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
