--- a/CarRentalSytem/CarRentalSytem.vcxproj
+++ b/CarRentalSytem/CarRentalSytem.vcxproj
@@ -142,7 +142,9 @@
     <ClInclude Include="User.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\..\..\..\..\sql_lite\CarRental.db" />
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
