--- a/CarRentalSytem/CarRentalSytem.vcxproj.filters
+++ b/CarRentalSytem/CarRentalSytem.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="sql_lite">
+      <UniqueIdentifier>{36a582d4-9b57-40d8-be2c-9c716ff8b5d1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -53,5 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="..\..\..\..\..\..\sql_lite\CarRental.db">
+      <Filter>sql_lite</Filter>
+    </None>
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
